Dockerfile was added

--- a/telco_churn.ipynb
+++ b/telco_churn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 47,
    "id": "65138662-7639-49c5-ac31-ac793b74e961",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 48,
    "id": "7ceb95ed-34de-4895-9cc8-7a9bb23b27a1",
    "metadata": {},
    "outputs": [
@@ -407,7 +407,7 @@
        "[7043 rows x 21 columns]"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 49,
    "id": "302265a8-2fe9-414b-979f-ebfdd9546189",
    "metadata": {},
    "outputs": [],
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 50,
    "id": "e6faa569-2abc-40be-bd7e-3b20e97451be",
    "metadata": {},
    "outputs": [],
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 51,
    "id": "3032276e-3e60-43a0-a8e6-978d1edca4c6",
    "metadata": {},
    "outputs": [],
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 52,
    "id": "b9ceb2ef-7245-42f2-911b-26f94e46d004",
    "metadata": {},
    "outputs": [],
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 56,
    "id": "bd1e09f7-da3f-43ae-9645-0024cbc28feb",
    "metadata": {},
    "outputs": [],
@@ -505,7 +505,7 @@
     "    dv = DictVectorizer(sparse=False)\n",
     "    X_train = dv.fit_transform(dicts)\n",
     "\n",
-    "    model = LogisticRegression(C=C, max_iter=1000)\n",
+    "    model = LogisticRegression(C=C, max_iter=10000)\n",
     "    model.fit(X_train, y_train)\n",
     "    \n",
     "    return dv, model"
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 57,
    "id": "2162dee2-0548-4f61-986c-99a8b9e7f67c",
    "metadata": {},
    "outputs": [],
@@ -529,31 +529,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 65,
    "id": "63575f66-d02b-42a8-8dcf-ac1eb8686706",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ryanr\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:465: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "np.float64(0.8583788336745858)"
+       "np.float64(0.8584790427594873)"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 72,
    "id": "52f06c30-ee6b-42e3-bade-0454e052ac21",
    "metadata": {},
    "outputs": [],
@@ -580,17 +566,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
+   "id": "09bd6dfb-c03c-4c92-afeb-6f6aa7f443ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "id": "c91872e4-0ce3-4c52-8a43-61db37258cc1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_file = f'model_C={C}.bin'"
+    "output_file = f'model_C=1.0.bin'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 74,
    "id": "ff9311b3-a1b9-4fe1-8a69-8e88838213e9",
    "metadata": {},
    "outputs": [
@@ -600,7 +594,7 @@
        "'model_C=1.0.bin'"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 75,
    "id": "c8f0fef5-5826-4cbe-b1c1-29755bb47ffe",
    "metadata": {},
    "outputs": [],
@@ -623,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 76,
    "id": "999e5791-c0f1-4827-9e1f-20f270ec0a77",
    "metadata": {},
    "outputs": [],
@@ -642,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 77,
    "id": "63260590-dc33-4283-9b68-ee871511d995",
    "metadata": {},
    "outputs": [],
@@ -652,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 78,
    "id": "c96826de-a5b5-4af3-9fa7-86a8f71eade2",
    "metadata": {},
    "outputs": [],
@@ -663,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 79,
    "id": "23896c9b-b088-45e1-85d7-8f9459c9559a",
    "metadata": {},
    "outputs": [
@@ -1085,13 +1079,13 @@
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
-       "</style><div id=\"sk-container-id-3\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(max_iter=1000)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" checked><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>LogisticRegression</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.linear_model.LogisticRegression.html\">?<span>Documentation for LogisticRegression</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\"><pre>LogisticRegression(max_iter=1000)</pre></div> </div></div></div></div>"
+       "</style><div id=\"sk-container-id-3\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(max_iter=10000)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" checked><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>LogisticRegression</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.linear_model.LogisticRegression.html\">?<span>Documentation for LogisticRegression</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\"><pre>LogisticRegression(max_iter=10000)</pre></div> </div></div></div></div>"
       ],
       "text/plain": [
-       "LogisticRegression(max_iter=1000)"
+       "LogisticRegression(max_iter=10000)"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 80,
    "id": "dc5ae40a-3a79-47a4-a5e1-51915d0c4ab1",
    "metadata": {},
    "outputs": [],
@@ -1132,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 81,
    "id": "4b65e638-4613-4f32-b49b-019b5a2d02de",
    "metadata": {},
    "outputs": [],
@@ -1142,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 82,
    "id": "58e29067-afe8-4aa4-8294-1307373a4d22",
    "metadata": {},
    "outputs": [],
@@ -1152,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 83,
    "id": "e9cef24b-cd70-426b-b2a7-9d749852b99f",
    "metadata": {},
    "outputs": [
@@ -1161,7 +1155,7 @@
      "output_type": "stream",
      "text": [
       "input: {'gender': 'female', 'seniorcitizen': 0, 'partner': 'yes', 'dependents': 'no', 'phoneservice': 'no', 'multiplelines': 'no_phone_service', 'internetservice': 'dsl', 'onlinesecurity': 'no', 'onlinebackup': 'yes', 'deviceprotection': 'no', 'techsupport': 'no', 'streamingtv': 'no', 'streamingmovies': 'no', 'contract': 'month-to-month', 'paperlessbilling': 'yes', 'paymentmethod': 'electronic_check', 'tenure': 1, 'monthlycharges': 29.85, 'totalcharges': 29.85}\n",
-      "output: 0.5594119791402998\n"
+      "output: 0.5628798298465019\n"
      ]
     }
    ],
@@ -1172,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 87,
    "id": "880a4400-47da-4abc-82c2-dc184ae10158",
    "metadata": {},
    "outputs": [],
@@ -1182,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 88,
    "id": "e81c6969-4e3f-4c51-b929-bc0229ef9436",
    "metadata": {},
    "outputs": [],
@@ -1192,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 86,
    "id": "ba918613-08ad-4238-af7c-f5548bd8ef7e",
    "metadata": {},
    "outputs": [
@@ -1222,7 +1216,7 @@
        " 'churn': 0}"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
